# gait-control-direct-id-paper

./: .doctr-files  .gitignore  .travis.yml  Makefile  README.rst  default-config.yml  github_deploy_key_csu_hmc_gait_control_direct_id_paper.enc  main.tex  outline.rst  references.bib
notebooks/: artificial_variations.ipynb  belt_speed_comparisons.ipynb  check_angular_rate_calcs.ipynb  compare_perturbed_to_normal.ipynb  control_solver_example.ipynb  data_munging.ipynb  find_moment_error.ipynb  form_linear_system.ipynb  id_m_star_only.ipynb  identify_from_simulated_data.ipynb  interactive_grf_landmarks.ipynb  marker_error_propogation.ipynb  meta_data_check.ipynb  predict_phase.ipynb  walking_least_squares.ipynb
processed-data/: gait_landmark_settings.py
src/: CMakeLists.txt  DynamicWalkerBuildModel.cpp  clean_data.py  control_solver_example.ipynb  control_solver_example.py  controllers.py  data_munging.ipynb  example_identification_result_plot.py  example_inverse_dynamics_correlation_plot.py  example_mean_gain_plots.py  gait_landmark_settings.py  grf_landmark_settings.py  identify_controller.py  identify_controller_from_artificial_data.py  identify_controller_from_normal_walking.py  identify_full_gain_matrix_controller.py  identify_joint_isolated_controller_from_perturbed.py  linear_system.ipynb  marker_time_stamp_stack_up.py  plot_mean_gains.py  prep_data_for_identification_with_plots.py  prep_data_for_nick.py  prep_data_for_zenodo.py  scale_motion_variation.py  sig_diff_than_zero.py  simplified_leg.py  simulate.py  simulation.py  subject_mass.py  subject_table.py  table_no_control_vaf_comparison.py  test_utils.py  unperturbed_perturbed_comparison.py  utils.py  van-der-kooij-2005.py  walking_least_squares.ipynb
src/notebooks/: perturbations.ipynb  walking_least_squares.ipynb
tables/: no-control-vaf-table.tex  subjects.tex
